add registry and docs
